istio-helm-on-eks-guide/mtls-security/peerauthentication-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-sample
spec:
  mtls:
    mode: STRICT
