istio-helm-on-eks-guide/mtls-security/authorizationpolicy-allow-only-frontend.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-httpbin-from-frontend
  namespace: istio-sample
spec:
  selector:
    matchLabels:
      app: httpbin
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-sample/sa/frontend
